fixed footer moving on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -142,3 +142,4 @@ input:checked + svg {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none;  /* IE 10+ */
 }
+ .footerdiv{position:fixed; left:0; right:0; bottom:0; z-index:777}
